--- a/MVC/Views/SifreHatirlat/Index.cshtml
+++ b/MVC/Views/SifreHatirlat/Index.cshtml
@@ -41,6 +41,8 @@
 <body>
     @using (Html.BeginForm("Index", "SifreHatirlat", FormMethod.Post))
     {
+        @Html.AntiForgeryToken()
+
         <table border="0" cellpadding="0" cellspacing="0">
             <tr>
                 <th colspan="3">
